--- a/jbserve/server/package.json
+++ b/jbserve/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "private": true,
   "version": "0.0.0",
-  "description": "a Sails application",
+  "description": "JBrowse Server",
   "keywords": [],
   "dependencies": {
     "ejs": "2.3.4",
