add Blast2Gff bin

--- a/jbserve/utils/package.json
+++ b/jbserve/utils/package.json
@@ -11,7 +11,8 @@
       "jblast-export" : "./jbexport.js",
       "jblast-xml2json" : "./blastxml2json.js",
       "jblast-addglobal": "./globalAddBlast.js",
-      "jblast-xml2csv":"./blastxml2csv.js"
+      "jblast-xml2csv":"./blastxml2csv.js",
+      "jblast-xml2gff": "./Blast2Gff.pl"
   },
   "author": "eyao",
   "license": "GNU LESSER GENERAL PUBLIC LICENSE",
