--- a/jbserve/server/package.json
+++ b/jbserve/server/package.json
@@ -5,13 +5,15 @@
   "description": "JBrowse Server",
   "keywords": [],
   "dependencies": {
+    "cors": "^2.8.0",
+    "deferred": "^0.7.5",
     "ejs": "2.5.1",
     "grunt": "1.0.1",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
     "grunt-contrib-concat": "1.0.1",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "1.0.1",
+    "grunt-contrib-cssmin": "1.0.2",
     "grunt-contrib-jst": "1.0.0",
     "grunt-contrib-less": "1.4.0",
     "grunt-contrib-uglify": "2.0.0",
@@ -19,6 +21,11 @@
     "grunt-sails-linker": "~0.10.1",
     "grunt-sync": "0.6.2",
     "include-all": "~0.1.6",
+    "jquery": "^3.1.0",
+    "jsdom": "^9.4.5",
+    "kue": "^0.11.1",
+    "kue-ui": "^0.1.0",
+    "node-getopt": "^0.2.3",
     "rc": "1.1.6",
     "sails": "~0.12.1",
     "sails-disk": "~0.10.9"
