--- a/jbserve/server/package.json
+++ b/jbserve/server/package.json
@@ -28,7 +28,8 @@
     "node-getopt": "^0.2.3",
     "rc": "1.1.6",
     "sails": "~0.12.1",
-    "sails-disk": "~0.10.9"
+    "sails-disk": "~0.10.9",
+    "socket.io-redis": "^1.0.0"
   },
   "scripts": {
     "debug": "node debug app.js",
