--- a/plugins/JBlast/server/jblast-galaxy-tools/package.json
+++ b/plugins/JBlast/server/jblast-galaxy-tools/package.json
@@ -5,19 +5,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "bin" : {
-      "jblast-start":"./bin/jblaststart.js",
-      "jblast-offset" : "./bin/jboffset.js",
-      "jblast-export" : "./bin/jbexport.js",
-      "jblast-xml2json" : "./bin/blastxml2json.js",
-      "jblast-xml2csv":"./bin/blastxml2csv.js",
-      "jblast-tab2gff": "./bin/Blast2Gff.pl"
+  "bin": {
+    "jblast-start": "./bin/jblaststart.js",
+    "jblast-offset": "./bin/jboffset.js",
+    "jblast-export": "./bin/jbexport.js",
+    "jblast-xml2json": "./bin/blastxml2json.js",
+    "jblast-xml2csv": "./bin/blastxml2csv.js",
+    "jblast-tab2gff": "./bin/Blast2Gff.pl"
   },
   "author": "eyao",
   "license": "GNU LESSER GENERAL PUBLIC LICENSE",
   "dependencies": {
     "dateformat": "^1.0.12",
     "fs": "^0.0.2",
+    "fs.extra": "^1.3.2",
     "node-getopt": "^0.2.3",
     "path": "^0.12.7",
     "request": "^2.72.0",
