--- a/plugins/JBlast/server/jblast-galaxy-tools/package.json
+++ b/plugins/JBlast/server/jblast-galaxy-tools/package.json
@@ -1,6 +1,9 @@
 {
   "name": "jblast-galaxy-tools",
+  "description": "JBlast Galaxy Tools",
   "version": "0.1.0",
+  "author": "eyao",
+  "license": "MIT",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,8 +16,9 @@
     "jblast-tab2gff": "./bin/Blast2Gff.pl",
     "jblast-setup-galaxy": "./bin/copyfiles.js"
   },
-  "author": "eyao",
-  "license": "GNU LESSER GENERAL PUBLIC LICENSE",
+  "scripts": {
+    "postinstall": "bin/postinstall.js"
+  },
   "dependencies": {
     "dateformat": "^1.0.12",
     "fs": "^0.0.2",
@@ -30,6 +34,5 @@
   "devDependencies": {
     "request-debug": "^0.2.0",
     "prettyjson": "^1.1.3"
-  },
-  "description": "JBlast Galaxy Tools"
+  }
 }
