--- a/jblast-galaxy-tools/package.json
+++ b/jblast-galaxy-tools/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "author": "eyao",
   "license": "MIT",
-  "scripts": {
+  "savescripts": {
     "postinstall": "bin/postinstall.js"
   },
   "bin": {
@@ -14,11 +14,14 @@
     "jblast-xml2json": "./bin/blastxml2json.js",
     "jblast-xml2csv": "./bin/blastxml2csv.js",
     "jblast-tab2gff": "./bin/Blast2Gff.pl",
-    "jblast-setup-galaxy": "./bin/copyfiles.js"
+    "jblast-setup-galaxy": "./bin/copyfiles.js",
+    "jblast-config": "./bin/index.js"
   },
   "dependencies": {
+    "child_process": "^1.0.2",
     "dateformat": "^1.0.12",
     "fs": "^0.0.2",
+    "fs-finder": "^1.8.1",
     "fs.extra": "^1.3.2",
     "node-getopt": "^0.2.3",
     "path": "^0.12.7",
