--- a/jblast-galaxy-tools/package.json
+++ b/jblast-galaxy-tools/package.json
@@ -15,7 +15,8 @@
     "jblast-xml2csv": "./bin/blastxml2csv.js",
     "jblast-tab2gff": "./bin/Blast2Gff.pl",
     "jblast-setup-galaxy": "./bin/copyfiles.js",
-    "jblast-config": "./bin/index.js"
+    "jblast-config": "./bin/index.js",
+    "jblast-test": "./bin/testglobal.js"
   },
   "dependencies": {
     "child_process": "^1.0.2",
@@ -23,6 +24,7 @@
     "fs": "^0.0.2",
     "fs-finder": "^1.8.1",
     "fs.extra": "^1.3.2",
+    "jsonfile": "^2.4.0",
     "node-getopt": "^0.2.3",
     "path": "^0.12.7",
     "request": "^2.74.0",
