rename to jblast-tools from jblast-galaxy-tools

--- a/jblast-tools/package.json
+++ b/jblast-tools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jblast-galaxy-tools",
+  "name": "jblast-tools",
   "description": "JBlast Galaxy Tools",
   "version": "0.1.0",
   "author": "eyao",
