--- a/jblast-tools/config/galaxy.ini
+++ b/jblast-tools/config/galaxy.ini
@@ -21,6 +21,8 @@ prefix = /galaxy
 [app:main]
 
 paste.app_factory = galaxy.web.buildapp:app_factory
+
+# this is where we add the JBlast tool panel
 tool_config_file = config/tool_conf.xml.sample,config/shed_tool_conf.xml,config/jblast_tool_conf.xml
 
 use_nglims = False
