--- a/jblast-tools/config/galaxy.ini
+++ b/jblast-tools/config/galaxy.ini
@@ -29,6 +29,7 @@ use_nglims = False
 nglims_config_file = tool-data/nglims.yaml
 use_interactive = True
 
+# email addresses of admin users (users must be regsitered)
 #admin_users = admin@usegalaxy.org
 
 [galaxy_amqp]
