--- a/jblast-tools/package.json
+++ b/jblast-tools/package.json
@@ -14,6 +14,7 @@
     "jblast-xml2json": "./bin/blastxml2json.js",
     "jblast-xml2csv": "./bin/blastxml2csv.js",
     "jblast-tab2gff": "./bin/Blast2Gff.pl",
+    "jblast-simblast": "./bin/simblast.js",
     "jblast": "./bin/configutil.js"
   },
   "dependencies": {
