--- a/plugins/JBlast/servermod/package.json
+++ b/plugins/JBlast/servermod/package.json
@@ -21,6 +21,7 @@
   "license": "GNU LESSER GENERAL PUBLIC LICENSE",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "dateformat": "^1.0.12",
     "deferred": "^0.7.5",
     "fs": "0.0.1-security",
     "request": "^2.76.0",
