--- a/plugins/JBlast/servermod/package.json
+++ b/plugins/JBlast/servermod/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "dateformat": "^1.0.12",
+    "deepmerge": "^1.3.1",
     "deferred": "^0.7.5",
     "fs": "0.0.1-security",
     "request": "^2.76.0",
