update dependency packages

--- a/jblast-tools/package.json
+++ b/jblast-tools/package.json
@@ -27,7 +27,8 @@
     "jsonfile": "^2.4.0",
     "node-getopt": "^0.2.3",
     "path": "^0.12.7",
-    "request": "^2.75.0",
+    "prettyjson": "^1.2.1",
+    "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "util": "^0.10.3",
     "xml2js": "^0.4.16",
