--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "jbh-jblast",
-  "version": "0.0.4",
+  "version": "0.0.41",
   "description": "JBlast",
-  "main": "dist/api/hooks/jblast/index.js",
+  "main": "api/hooks/jblast/index.js",
   "scripts": {
     "test": "mocha --reporter spec --compilers js:babel-core/register",
-    "prepublish": "gulp"
+    "X_prepublish": "gulp"
   },
   "keywords": [
     "sails",
@@ -15,8 +15,18 @@
   "author": "enuggetry",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^3.5.0",
+    "deepmerge": "^1.3.2",
+    "deferred": "^0.7.6",
+    "fs": "0.0.1-security",
+    "jQuery-ui-Slider-Pips": "github:simeydotme/jQuery-ui-Slider-Pips#v1.11.4",
+    "jquery.mb.extruder": "^2.6.0",
     "lodash": "^4.16",
-    "marlinspike": "^1.0"
+    "path": "^0.12.7",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
+    "require-all": "^2.2.0",
+    "xmljson": "^0.2.0"
   },
   "bundledDependencies": [
     "lodash"
