--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "jbh-jblast",
-  "version": "0.0.41",
+  "version": "0.0.79",
   "description": "JBlast",
   "main": "api/hooks/jblast/index.js",
   "scripts": {
     "test": "mocha --reporter spec --compilers js:babel-core/register",
-    "X_prepublish": "gulp"
+    "prepublish": "grunt bump"
   },
   "keywords": [
     "sails",
     "sails.js",
-    "jbrowse"
+    "jbrowse",
+    "galaxy"
   ],
   "author": "enuggetry",
   "license": "MIT",
@@ -20,6 +21,7 @@
     "deferred": "^0.7.6",
     "fs": "0.0.1-security",
     "jQuery-ui-Slider-Pips": "github:simeydotme/jQuery-ui-Slider-Pips#v1.11.4",
+    "jquery-ui-dist": "^1.12.1",
     "jquery.mb.extruder": "^2.6.0",
     "lodash": "^4.16",
     "path": "^0.12.7",
@@ -32,13 +34,10 @@
     "lodash"
   ],
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.14.0",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.2",
+    "grunt": "^1.0.1",
+    "grunt-bump": "^0.8.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-version-bump": "^1.0.8",
     "mocha": "^3.1.0",
     "sails": "^0.12.5",
     "socket.io-client": "^1.3.5",
