--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "deepmerge": "^1.3.2",
     "deferred": "^0.7.6",
     "fs": "0.0.1-security",
+    "fs-extra": "^3.0.1",
     "jQuery-ui-Slider-Pips": "github:simeydotme/jQuery-ui-Slider-Pips#v1.11.4",
     "jquery-ui-dist": "^1.12.1",
     "jquery.mb.extruder": "^2.6.0",
     "lodash": "^4.16",
+    "marlinspike": "^1.0.0",
     "path": "^0.12.7",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
