--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "api/hooks/jblast/index.js",
   "scripts": {
     "prepublish": "grunt bump-publish --force",
-    "test": "nyc node ./node_modules/mocha/bin/mocha test/**/*.test.js --nightwatch-test phantomjs"
+    "test": "nyc node ./node_modules/mocha/bin/mocha test/**/*.test.js --nightwatch-test phantomjs",
+    "postinstall": "node bin/postinstall.js"
   },
   "keywords": [
     "sails",
@@ -16,6 +17,7 @@
   "author": "enuggetry",
   "license": "MIT",
   "dependencies": {
+    "blastjs": "github:enuggetry/blastjs",
     "bluebird": "^3.5.0",
     "deepmerge": "^1.5.0",
     "deferred": "^0.7.8",
@@ -44,6 +46,7 @@
     "grunt-contrib-jshint": "^1.1.0",
     "grunt-publish": "^1.0.0",
     "grunt-version-bump": "^1.0.8",
+    "jbrowse": "github:gmod/jbrowse",
     "jbserver": "github:enuggetry/jbserver",
     "minimist": "^1.2.0",
     "mocha": "^3.4.2",
