add shelljs module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jbh-jblast",
-  "version": "0.0.242",
+  "version": "0.0.251",
   "description": "JBlast - Integrated JBrowse BLAST with Galaxy (JBrowse Server Hook)",
   "main": "api/hooks/jblast/index.js",
   "scripts": {
@@ -31,9 +31,11 @@
     "lodash": "^4.16",
     "marlinspike": "^1.0.0",
     "path": "^0.12.7",
+    "replaceall": "^0.1.6",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "require-all": "^2.2.0",
+    "shelljs": "^0.7.8",
     "xmljson": "^0.2.0"
   },
   "bundledDependencies": [
