--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "jbh-jblast",
-  "version": "0.0.268",
+  "version": "0.0.478",
   "description": "JBlast - Integrated JBrowse BLAST with Galaxy (JBrowse Server Hook)",
   "main": "api/hooks/jblast/index.js",
   "scripts": {
     "prepublish": "grunt bump-publish --force",
-    "test": "nyc node ./node_modules/mocha/bin/mocha test/**/*.test.js --nightwatch-test phantomjs",
+    "test": "node ./node_modules/mocha/bin/mocha test/**/*.test.js --nightwatch-test phantomjs",
+    "xxtest": "nyc node ./node_modules/mocha/bin/mocha test/**/*.test.js --nightwatch-test phantomjs",
     "postinstall": "node bin/postinstall.js",
     "gendocs": "node docs/gendocs_run.js"
   },
@@ -25,16 +26,21 @@
     "fs": "0.0.1-security",
     "fs-extra": "^3.0.1",
     "fs-finder": "^1.8.1",
+    "grunt-bump": "^0.8.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-publish": "^1.0.0",
     "jQuery-ui-Slider-Pips": "github:simeydotme/jQuery-ui-Slider-Pips#v1.11.4",
     "jquery-ui-dist": "^1.12.1",
     "jquery.mb.extruder": "^2.6.0",
     "lodash": "^4.16",
     "marlinspike": "^1.0.0",
+    "mock-require": "^2.0.2",
     "path": "^0.12.7",
     "replaceall": "^0.1.6",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "require-all": "^2.2.0",
+    "resolve-path": "^1.3.3",
     "sails-hook-update-or-create": "^0.1.4",
     "shelljs": "^0.7.8",
     "xmljson": "^0.2.0"
@@ -46,9 +52,6 @@
     "chai": "^4.0.2",
     "chromedriver": "^2.30.1",
     "grunt": "^1.0.1",
-    "grunt-bump": "^0.8.0",
-    "grunt-contrib-jshint": "^1.1.0",
-    "grunt-publish": "^1.0.0",
     "grunt-version-bump": "^1.0.8",
     "jbrowse": "github:gmod/jbrowse",
     "jbserver": "github:enuggetry/jbserver",
