--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jbh-jblast",
-  "version": "0.0.593",
+  "version": "0.0.624",
   "description": "JBlast - Integrated JBrowse BLAST with Galaxy (JBrowse Server Hook)",
   "main": "api/hooks/jblast/index.js",
   "scripts": {
@@ -52,6 +52,8 @@
   ],
   "devDependencies": {
     "chai": "^4.0.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-shallow-deep-equal": "^1.4.6",
     "chromedriver": "^2.30.1",
     "grunt": "^1.0.1",
     "grunt-version-bump": "^1.0.8",
