--- a/jblast-simtool/package.json
+++ b/jblast-simtool/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "fs": "^0.0.2",
-    "node-getopt": "^0.2.3"
+    "node-getopt": "^0.2.3",
+    "path": "^0.12.7",
+    "shelljs": "^0.7.7"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
