add jb_setup.js to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ install:
   - npm install
 before_script:
   - ./bin/blast_getBlast.js
-  - ./bin/blast_downloadDb.js htgs.05 
+  - ./bin/blast_downloadDb.js htgs.05
+  - ./jb_setup.js
 script:
   - npm test
 after_failure:
