--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,14 @@ install:
   - npm install
   - npm install -g sails
 before_script:
-#  - ./bin/blast_getBlast.js
-#  - ./bin/blast_downloadDb.js htgs.05
-#  - ./jb_setup.js
   - git clone http://github.com/gmod/jbserver
   - cd jbserver
   - npm install
   - npm install gmod/jblast
   - ./bin/blast_getBlast.js
   - ./bin/blast_downloadDb.js htgs.05
-  - nohup sails lift
+  - nohup sails lift > /dev/null 2>&1 &
+  - cd ..
 script:
   - npm test
 after_failure:
-  - cat JBrowse-1.x.x-dev/setup.log 
-  - find JBrowse-1.x.x-dev/extlib/lib/perl5
-  - cat JBrowse-1.x.x-dev/src/build-report.txt
