--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,15 @@ before_script:
   - git clone http://github.com/gmod/jbserver
   - cd jbserver
   - npm install
-  - npm install gmod/jblast
-  - ./bin/blast_getBlast.js
-  - ./bin/blast_downloadDb.js htgs.05
-  - nohup sails lift > jbserver.log 2>&1 &
-  - echo $! > save_pid.txt #save last process pid
-  - cd ..
+#  - npm install gmod/jblast
+#  - ./bin/blast_getBlast.js
+#  - ./bin/blast_downloadDb.js htgs.05
+#  - nohup sails lift > jbserver.log 2>&1 &
+#  - echo $! > save_pid.txt #save last process pid
+#  - cd ..
 script:
   - npm test
-  - kill -9 `cat jbserver/save_pid.txt`
+#  - kill -9 `cat jbserver/save_pid.txt`
 after_failure:
-  - cat jbserver/jbserver.log
+#  - cat jbserver/jbserver.log
   
