--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_script:
   - cd ..
 script:
   - npm test
+  - wget http://localhost:5001/jbrowse/index.html
   - kill -9 `cat jbserver/save_pid.txt`
 after_failure:
   - cat jbserver/jbserver.log
