fix travis - add sleep 20

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_script:
   - cd ..
 script:
   - npm test
+  - sleep 20
   - wget http://localhost:5001/jbrowse
   - kill -9 `cat jbserver/save_pid.txt`
 after_failure:
