--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@ node_modules
 # Users Environment Variables
 .lock-wscript
 
-# jbserver directory used by npm test
-jbserver
+# jbconnect directory used by npm test
+jbconnect
