--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "app-root-path": "^2.0.1",
-    "blastjs": "github:enuggetry/blastjs",
+    "jblastjs": "github:enuggetry/jblastjs",
     "bluebird": "^3.5.0",
     "deepmerge": "^1.5.0",
     "deferred": "^0.7.8",
@@ -59,6 +59,7 @@
     "grunt-version-bump": "^1.0.8",
     "jsdoc": "^3.5.5",
     "jsdoc-sphinx": "0.0.6",
+    "faux-blastdb": "github:enuggetry/faux-blastdb",
     "minimist": "^1.2.0",
     "mocha": "^3.4.2",
     "nightwatch": "^0.9.16",
@@ -75,7 +76,7 @@
   },
   "sails": {
     "isHook": true,
-    "isJBConnectHook":true,
+    "isJBConnectHook": true,
     "hookName": "jblast"
   }
 }
