--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "MIT",
   "dependencies": {
     "app-root-path": "^2.0.1",
-    "jblastjs": "github:enuggetry/jblastjs",
+    "blast-ncbi-tools": "github:enuggetry/blast-ncbi-tools",
     "bluebird": "^3.5.0",
     "deepmerge": "^1.5.0",
     "deferred": "^0.7.8",
