--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ before_script:
   - cd jbconnect
   - npm install
   - npm install gmod/jblast-jbconnect-hook
-  - npm install @gmod/jbrowse@1.15.2
+  - npm install @gmod/jbrowse@1.15.3
   - node ./utils/jb_setup.js
+  - ls ./utils
+  - ls .blastdb
   - ./utils/blast_getBlastUtils.js
 #  - nohup sails lift --port 5001 > jbconnect.log 2>&1 &
 #  - echo $! > save_pid.txt #save last process pid
