--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ before_script:
   - ls utils
   - ls blastdb
   - ls blastbin
-  - ls node_modules/blast-ncbi-tools
-  - ls node_modules/faux-blastdb
+#  - ls node_modules/blast-ncbi-tools
+#  - ls node_modules/faux-blastdb
 #  - nohup sails lift --port 5001 > jbconnect.log 2>&1 &
 #  - echo $! > save_pid.txt #save last process pid
 #  - cd ..
