--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ before_script:
   - git clone http://github.com/gmod/jbconnect
   - cd jbconnect
   - npm install
+  - npm install enuggetry/blast-ncbi-tools
+  - npm install enuggetry/faux-blastdb
   - npm install gmod/jblast-jbconnect-hook
   - ./utils/blast_getBlastUtils.js
   - npm install @gmod/jbrowse@1.15.2
