--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ services:
   - redis-server
 install:
 before_script:
+  - npm -v
+  - node -v
   - npm i -g sails@1.0.2
   - git clone http://github.com/gmod/jbconnect
   - cd jbconnect
