--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 before_script:
   - npm install --global update-travis
   - update-travis --versions 6.4.1
+  - if [[ `npm -v` != 6.4* ]]; then npm i -g npm@6.4.1; fi
   - npm -v
   - node -v 
   - npm i -g sails@1.0.2
