--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - git clone --depth=50 http://github.com/gmod/jbconnect
   - cd jbconnect
   - npm install
-  - git clone --depth=50 http://github.com/enuggetry/jblast-jbconnect-hook
+  - npm install enuggetry/jblast-jbconnect-hook
   - pwd
   - ls
   - ls ..
