--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ before_script:
   - git clone --depth=50 http://github.com/gmod/jbconnect
   - cd jbconnect
   - npm install
+  - npm install blast-ncbi-tools
+  - npm install faux-blastdb
   - npm install enuggetry/jblast-jbconnect-hook
   - pwd
   - ls
@@ -24,13 +26,13 @@ before_script:
   - ls utils
   - ls node_modules
   - ls node_modules/jblast-jbconnect-hook/node_modules
+  - ls node_modules/blast-ncbi-tools
+  - ls node_modules/faus-blastdb
   - ./utils/blast_getBlastUtils.js
   - npm install @gmod/jbrowse@1.15.2
   - node ./utils/jb_setup.js
   - ls blastdb
   - ls blastbin
-  - ls node_modules/blast-ncbi-tools
-  - ls node_modules/faus-blastdb
 #  - ls node_modules/blast-ncbi-tools
 #  - ls node_modules/faux-blastdb
 #  - nohup sails lift --port 5001 > jbconnect.log 2>&1 &
@@ -39,12 +41,6 @@ before_script:
 #  - sleep 20
 script:
   - npm run jblast-test
-#  - wget http://localhost:5001/jbrowse
-#  - wget http://localhost:5001/login
-#  - wget http://localhost:5001/register
-#  - wget http://localhost:5001/loginstate
-#  - kill -9 `cat jbconnect/save_pid.txt`
-#  - cat jbconnect/jbconnect.log
 after_failure:
   - cat node_modules/@gmod/jbrowse/setup.log
   
