--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ before_script:
   - git clone --depth=50 http://github.com/gmod/jbconnect
   - cd jbconnect
   - npm install
-  - npm install blast-ncbi-tools
-  - npm install faux-blastdb
+#  - npm install blast-ncbi-tools
+#  - npm install faux-blastdb
   - npm install enuggetry/jblast-jbconnect-hook
   - pwd
   - ls
