--- a/.travis.yml
+++ b/.travis.yml
@@ -23,15 +23,16 @@ before_script:
   - ls
   - ls ..
   - ls utils
+  - ls workflows
   - find . -name "blast-ncbi-tools"
   - find . -name "faux-blastdb"
+  - ls node_modules/blast-ncbi-tools
+  - ls node_modules/faux-blastdb
   - ./utils/blast_getBlastUtils.js
   - npm install @gmod/jbrowse@1.15.2
   - node ./utils/jb_setup.js
   - ls blastdb
   - ls blastbin
-#  - ls node_modules/blast-ncbi-tools
-#  - ls node_modules/faux-blastdb
 #  - nohup sails lift --port 5001 > jbconnect.log 2>&1 &
 #  - echo $! > save_pid.txt #save last process pid
 #  - cd ..
