--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,15 @@ before_script:
   - git clone --depth=50 http://github.com/gmod/jbconnect
   - cd jbconnect
   - npm install
-#  - npm install blast-ncbi-tools
-#  - npm install faux-blastdb
+  - npm install blast-ncbi-tools
+  - npm install faux-blastdb
   - npm install enuggetry/jblast-jbconnect-hook
   - ls
-  - ls ..
+#  - ls ..
   - ls utils
   - ls workflows
-  - find . -name "blast-ncbi-tools"
-  - find . -name "faux-blastdb"
+#  - find . -name "blast-ncbi-tools"
+#  - find . -name "faux-blastdb"
   - ls node_modules/blast-ncbi-tools
   - ls node_modules/faux-blastdb
   - ./utils/blast_getBlastUtils.js
