--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,9 @@ before_script:
 #  - sleep 20
 script:
   - npm run jblast-coverage
+after_success:
+  - npm run coveralls
+  - ./node_modules/nyc/bin/nyc.js report
 after_failure:
   - cat node_modules/@gmod/jbrowse/setup.log
   
