add travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ before_script:
 script:
   - npm run jblast-coverage
 after_success:
+  - ls coverage
   - npm run coveralls
   - ./node_modules/nyc/bin/nyc.js report
 after_failure:
