--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "chai": "^4.0.2",
     "chai-as-promised": "^7.1.1",
     "chai-shallow-deep-equal": "^1.4.6",
+    "coveralls": "^3.0.3",
     "grunt": "^1.0.1",
     "grunt-version-bump": "^1.0.8",
     "jsdoc": "^3.5.5",
