--- a/.travis.yml
+++ b/.travis.yml
@@ -35,8 +35,9 @@ script:
   - npm run jblast-coverage
 after_success:
   - cd ../jblast-jbconnect-hook
-  - ls coverage
+  - ls ../jbconnect/coverage
   - cat ../jbconnect/coverage/lcov.info | ./node_modules/.bin/coveralls
+  - cd ../jbconnect
   - ./node_modules/nyc/bin/nyc.js report
 after_failure:
   - cat node_modules/@gmod/jbrowse/setup.log
