--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "resolve-path": "^1.3.3",
     "sails-hook-update-or-create": "^0.1.4",
     "shelljs": "^0.7.8",
+    "string": "^3.3.3",
     "xmljson": "^0.2.0"
   },
   "bundledDependencies": [
