--- a/.travis.yml
+++ b/.travis.yml
@@ -19,13 +19,12 @@ script:
   - git clone --depth=50 http://github.com/gmod/jbconnect
   - cd jbconnect
   - npm install
-  - npm install enuggetry/blast-ncbi-tools
-  - npm install enuggetry/faux-blastdb
+  - npm install blast-ncbi-tools faux-blastdb
   - npm install gmod/jblast-jbconnect-hook
   - ./utils/blast_getBlastUtils.js 2.8.1
   - npm install @gmod/jbrowse@1.15.1
   - patch node_modules/@gmod/jbrowse/setup.sh fix_jbrowse_setup.patch
-  - node ./utils/jb_setup.js
+  - ./utils/jb_setup.js
   - ls blastdb
   - ls blastbin
   - npm run jblast-coverage
